--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 
 {
   "manifest_version": 3,
-  "name": "Head Script Injector",
+  "name": "Extract link",
   "version": "1.0.0",
-  "description": "Script beszúrása a <head> után, TabHTML változó beállításával.",
+  "description": "Extracts links.",
   "background": {
     "service_worker": "background.js"
   },
@@ -21,7 +21,7 @@
     "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["injector.js"],
+      "js": ["content.js"],
       "run_at": "document_start"
     }
   ],
