--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"],
-      "run_at": "document_start"
+      "run_at": "document_idle"
     }
   ],
  "web_accessible_resources": [{
