--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,9 @@
     "alarms",
     "notifications",
     "storage",
-    "sidePanel"]  ,
+    "sidePanel",
+    "offscreen"
+]  ,
   "host_permissions": ["<all_urls>"],
   "side_panel": {
     "default_path": "sidepanel.html"
